# jupyter-code-api-server

./: .env  .gitignore  Dockerfile  Dockerfile_build  README.md  app.py  config.json  jupyter_notebook_config.py  nginx.conf  pyproject.toml  requirements.txt  start.sh
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  Dropdown.js  GithubIcon.jsx  HasuraLogo.jsx  index.js  setupProxy.js
notebook/: insert_data.ipynb  server.ipynb  setup_weaviate.ipynb  vectorisation.ipynb
notebook/book_recommendation_pgvector/: insert_data.ipynb  server.ipynb
notebook/clickhouse_sre/: sre_assistant.ipynb
notebook/clickhouse_sre_assistant/: README.md  server.ipynb  synthetic_data.ipynb
notebook/hasura/workflow/: __init__.py
notebook/product_search/: insert_data.ipynb  server.ipynb  setup_weaviate.ipynb
notebook/smart_product_search/: README.md
static/: index.html
supervisor/: supervisord.conf
supervisor/programs/: flask.conf  nginx.conf  notebook.conf
