[tool.poetry]
name = "jupyter-code-api-server"
version = "0.1.0"
description = ""
authors = ["Simrat"]
readme = "README.md"
packages = [{include = "jupyter_code_api_server"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
requests = "2.31.0"
langchain = "0.0.229"
openai = "0.27.8"
requests-toolbelt = "1.0.0"
gql = "3.4.1"
pandas = "2.0.3"
boto3 = "1.15.0"
PyPDF2 = "3.0.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
